# python-examples

./: .gitignore  LICENSE  README.md  base64.ipynb  enum.ipynb  json.ipynb  logging.ipynb  pprint.ipynb  pydantic.ipynb  random.ipynb  requests.ipynb  test.ipynb  time.ipynb  tqdm.ipynb  urllib.ipynb
ai/: huggingface-cli.ipynb
ai/chroma/: 1.getting_started.ipynb  2.usage_guide.ipynb  chroma.sqlite3
ai/coze-client/: .env.example  README.md  chat_stream.py  requirements.txt  workflow.py  workflow_stream.py
ai/langchain/: 1.quickstart.ipynb  2.lcel.ipynb  2.map.ipynb  2.passthrough.ipynb
ai/llm/: chatglm3.ipynb
ai/sentence-transformers/: 1.quickstart.ipynb  computing_embeddings.ipynb  embeddings.pkl  paraphrase_mining.ipynb  semantic_search.ipynb  semantic_textual_similarity.ipynb
async/asyncio/: 2.asyncio.py
async/multiprocessing/: lock_test.py  pipe_test.py  pool_test.py  queue_test.py  task_test.py
async/threading/: threading.py  timer.py
demo/: extract_audio.py  split_folders.py
django/: django.ipynb
doc/: 12.venv.ipynb  4.controlflow.ipynb  5.datastructures.ipynb  6.modules.ipynb  7.inputoutput.ipynb  8.errors.ipynb  9.classes.ipynb
dotenv/: .env  dotenv.ipynb
fastapi/: main.py
file/: file.ipynb
image/: imageio.ipynb  pillow.ipynb
langchain/: 1.serve.py  2.lcel.ipynb
pandas/: excel.ipynb
pypkg-demo/: .gitignore  README.md  pyproject.toml  setup.py
pypkg-demo/src/pypkg_demo/: file_cache.py
pypkg-demo/tests/: file_cache_test.py
unittest/: README.md  name_function.py  names.py  test_name_function.py
virual/csv/: csv.ipynb
(+12 files in other folders)
